@@ -1280,7 +1280,7 @@ options.general.sortRecent=Sort recent file list
 options.general.checkModStatus=Warn if file is modified on disk by another program
 options.general.showFullPath=Show full path of buffer in title bar
 options.general.showSearchbar=Show search bar
-options.general.beepOnSearchAutoWrap=Beep when when searching automatically wraps
+options.general.beepOnSearchAutoWrap=Beep when searching automatically wraps
 options.general.showBufferSwitcher=Show buffer switcher
 options.general.showTips=Show tips on startup
 options.general.showSplash=Show splash screen on startup
